# handy-launcher

./: .gitignore  DEBUGGING.md  IMPLEMENTATION.md  LICENSE  SESSION_RECOVERY.md  TESTING.md  findings.md  progress.md  task_plan.md
docs/: requirements-analysis.md
docs/api/: ollama-integration.md
docs/architecture/: system-architecture.md
docs/development/: build.md  setup.md  testing.md
docs/plans/: 2026-03-17-handy-launcher-nested-design.md  2026-03-17-nested-app-implementation-plan.md  2026-03-17-setup-flow-auto-advance-plan.md
docs/user-guides/: ui-specifications.md
handy-launcher/: ambient.d.ts  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
handy-launcher/src-tauri/: Cargo.toml  tauri.conf.json
handy-launcher/src-tauri/capabilities/: default.json
handy-launcher/src-tauri/src/: lib.rs  main.rs  tray.rs
handy-launcher/src-tauri/src/commands/: config.rs  mod.rs  ollama.rs  system.rs
handy-launcher/src-tauri/src/models/: app_state.rs  config.rs  mod.rs  ollama.rs  system.rs
handy-launcher/src-tauri/src/services/: config_manager.rs  mod.rs  model_profiles.rs  ollama_manager.rs  ollama_supervisor.rs
handy-launcher/src-tauri/src/utils/: http.rs  logging.rs  mod.rs  paths.rs
handy-launcher/src/lib/: api.ts  completion-action.test.ts  completion-action.ts  debug-panel-access.test.ts  debug-panel-access.ts  model-availability.test.ts  model-availability.ts  model-profiles.test.ts  model-profiles.ts  selection-summary.test.ts  selection-summary.ts  setup-completion.test.ts  setup-completion.ts  setup-flow.test.ts  setup-flow.ts  (+7 more)
(+6 files in other folders)
