[package]
name = "handy-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5.0", features = [ "system-tray", "shell-all", "fs-all", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "time"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
sysinfo = "0.32"
which = "4.4"
futures-util = "0.3"
log = "0.4"
fern = "0.6"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
